edited tables so they are connected through connections and draggable